# gmail-size-classifier-rs

./: .gitignore  Cargo.toml  README.md  build.rs  tsconfig.json
scripts/: bundle_macos  bundle_win
src/: about.rs  app.rs  app_gpui_ui.rs  app_iced_ui.rs  gmail_client.rs  main.rs  server.rs
static/js/: script.js  script.ts
templates/: error.html.hbs  index.html.hbs
web/src/: app.ts  chart_section.ts  header.ts  main.ts  script.ts  search.ts  tab_section.ts  types.ts  utils.ts
web/tools/frontend-server/: index.js  package.json
