[package]
name = "rust-gpui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0"
async-trait = "0.1"
rocket = { version = "0.5.0", features = ["json", "secrets"] }
tokio = { version = "1.0", features = ["full"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
google-gmail1 = "5.0"
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
