[package]
name = "gmail-cleaner-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["iced_ui"]
iced_ui = []
gpui_ui = []

[package.metadata.bundle]
name = "Gmail Cleaner"
identifier = "com.home.gmail-cleaner-rs"
resources = ["templates"]
category = "public.app-category.productivity"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
iced = "0.10"
iced_native = "0.10"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
anyhow = "1.0"
async-trait = "0.1"
rocket = { version = "0.5.0", features = ["json", "secrets"] }

rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
open = "5.0"
native-dialog = "0.7"
